# glib-futures

./: Cargo.toml  LICENSE
src/: executor.rs  lib.rs  main.rs  sources.rs
src/gio/: file.rs  future.rs  input_stream.rs  mod.rs
