[package]
name = "glib-futures"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://github.com/sdroege/glib-futures"
license = "MIT"
keywords = ["glib", "gio", "async", "futures"]
categories = ["async", "api-bindings"]
description = """
Provides a Futures Executor around the GLib main context and various
Futures/Streams around GLib API
"""

[dependencies]
futures-core = { git = "https://github.com/rust-lang-nursery/futures-rs.git" }
futures-executor = { git = "https://github.com/rust-lang-nursery/futures-rs.git" }
futures-channel = { git = "https://github.com/rust-lang-nursery/futures-rs.git" }
futures-util = { git = "https://github.com/rust-lang-nursery/futures-rs.git" }
glib-sys = { git = "https://github.com/gtk-rs/sys.git", features = ["v2_36"] }
glib = { git = "https://github.com/gtk-rs/glib.git" }
gio = { git = "https://github.com/gtk-rs/gio.git", features = ["v2_34"], optional = true }

[features]
default-features = []
dox = []
gio_api = ["gio"]

[[bin]]
name = "example"
path = "examples/bin/example.rs"

[[bin]]
name = "gio-streams"
path = "examples/bin/gio_streams.rs"
required-features = ["gio_api"]
